<resources>
    <string name="app_name">Dokterstas</string>
    <string name="Menu_Settings">Settings</string>
    <string name="Menu_Category">New Category</string>
    <string name="Menu_Item">New item</string>
    <string name="product_name">product</string>
    <string name="title_activity_edit">Edit</string>
    <string name="setting_check">Notificatie weergeven voor controle checklist</string>
    <string name="setting_expiration_checked">false</string>
    <string name="banner_ad_unit_id">ca-app-pub-9987402400398249~3730114819</string>
    <string name="Confirmation">Weet u het zeker?</string>
    <string name="ja">ja</string>
    <string name="nee">nee</string>
    <string name="checklist">Checklist</string>
    <string name="item_toevoegen">Item toevoegen</string>
    <string name="kies_categorie_voor_nieuwe_item">Kies categorie voor nieuwe item:</string>
    <string name="naam">Naam</string>
    <string name="houdbaarheidsdatum_bijhouden">Houdbaarheidsdatum bijhouden</string>
    <string name="datum">Datum:</string>
    <string name="datum_kiezen">Datum kiezen</string>
    <string name="voorraad_bijhouden">Voorraad bijhouden</string>
    <string name="aantal">Aantal:</string>
    <string name="_0">0</string>
    <string name="volume_bijhouden">Volume bijhouden</string>
    <string name="volume_ml">Volume (mL):</string>
    <string name="opslaan">Opslaan</string>
    <string name="annuleer">Annuleer</string>
    <string name="categorie_toevoegen">Categorie toevoegen</string>
    <string name="naam_nieuwe_categorie">Naam nieuwe categorie:</string>
    <string name="item_bewerken">Item bewerken</string>
    <string name="voorraad">Voorraad:</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="nieuwe_datum">nieuwe datum</string>
    <string name="verwijder">verwijder</string>
    <string name="category">Category</string>
    <string name="instellingen">Instellingen</string>
    <string name="melding_lage_voorraad">Melding lage voorraad</string>
    <string name="lager_dan">Lager dan:</string>
    <string name="melding_houdbaarheidsdatum_bereikt">Melding houdbaarheidsdatum bereikt.</string>
    <string name="aantal_dagen_van_tevoren">Aantal dagen van tevoren:</string>
    <string name="melding_voor_controle_checklist">Melding voor dagelijkse controle checklist</string>
    <string name="tijdstip">Tijdstip:</string>
    <string name="categorie_verwijderen">Categorie verwijderen</string>
    <string name="verwijderen">Verwijderen</string>
    <string name="checklist_meldingen">Checklist meldingen:</string>
    <string name="voorraad_laag_van">Voorraad laag van:</string>
    <string name="houdbaarheidsdatum_verstreken_van">Houdbaarheidsdatum verstreken van:</string>
    <string name="herstel_gegevens">Herstel gegevens</string>
    <string name="bestellen">Bestellen</string>
</resources>
