<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:text="@string/item_toevoegen"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/createItemTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorText" />

    <TextView
        android:text="@string/kies_categorie_voor_nieuwe_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/textView2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText"
        android:hint="@string/naam"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:text="@string/houdbaarheidsdatum_bijhouden"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:id="@+id/thtBox" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:id="@+id/thtLayout"
        android:visibility="gone">

        <TextView
            android:text="@string/datum"
            android:layout_width="0dp"
            android:textColor="@color/colorText"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text=""
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:textColor="@color/colorText"
            android:layout_height="wrap_content"
            android:id="@+id/txtDate"/>
        <Button
            android:id="@+id/createDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/datum_kiezen"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>

    <CheckBox
        android:text="@string/voorraad_bijhouden"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/voorraadBox" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:id="@+id/voorraadLayout"
        android:visibility="gone">

        <TextView
            android:text="@string/aantal"
            android:layout_width="0dp"
            android:textColor="@color/colorText"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <EditText
            android:text="@string/_0"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:inputType="number"
            android:id="@+id/txtVoorraad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:text="@string/volume_bijhouden"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/volumeBox" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:id="@+id/volumeLayout"
        android:visibility="gone">

        <TextView
            android:text="@string/volume_ml"
            android:textColor="@color/colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <EditText
            android:text="@string/_0"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:inputType="number"
            android:id="@+id/txtVolume"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/save"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/opslaan"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

        <Button
            android:id="@+id/cancel"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/annuleer"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>
</LinearLayout>