<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">


    <TextView
        android:text="@string/Confirmation"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        android:id="@+id/textView"
        android:layout_weight="0.02" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">



        <Button
            android:id="@+id/yes"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ja"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/colorPrimary"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

        <Button
            android:id="@+id/no"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nee"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

    </LinearLayout>
</LinearLayout>